William Scott- Changed the spelling of twelveth to twelfth

--- a/unit 1/Asy/AsyncAssignment.html
+++ b/unit 1/Asy/AsyncAssignment.html
@@ -4,7 +4,7 @@
 <title>Friday Async Activity</title>
 </head>
 <body>
-<p>My name is William Scott. I am in the Twelveth grade. I plan to go to college after Highschool to pursue Art. There is no set college I am willing to go to, as there are many possibilities.</p>
+<p>My name is William Scott. I am in the Twelfth grade. I plan to go to college after Highschool to pursue Art. There is no set college I am willing to go to, as there are many possibilities.</p>
 <ol> I have the following classes so far this semester.
     <li>Music Appreciation</li> <li>Music Theory</li> <li>Latin Four</li> <li>AP Liturature</li> <li>Research Writing</li> <li>Coding two</li> <li>AP Calculus</li> <li>Afrian History</li>
 
