William Scott- used inline and padding as well as the list style in order to develop a basic list.

--- a/unit 1/htmlstylepractice.html
+++ b/unit 1/htmlstylepractice.html
@@ -5,7 +5,12 @@
 </head>
 <body>
 
-<div style="background-color: darkblue; height: 35px;"> Navbar</div>
+<div style="background-color: rgb(0, 104, 139); height: 50px;"> 
+<li style="display: inline; padding: 8px;">Mens</li>
+<li style="display: inline; padding: 8px;">Womens</li>
+<li style="display: inline; padding: 8px;">Kids</li>
+<li style="display: inline; padding: 8px;">Sale</li>
+</div></ul>
 <div style="background-color: royalblue; height: 800px;">Landing Image</div>
 
 </body>
