William Scott- Created a background image div as the landing image

--- a/unit 1/htmlstylepractice.html
+++ b/unit 1/htmlstylepractice.html
@@ -4,14 +4,19 @@
 <title>HTML Tutorial</title>
 </head>
 <body>
-
-<div style="background-color: rgb(0, 104, 139); height: 50px;"> 
-<li style="display: inline; padding: 8px;">Mens</li>
-<li style="display: inline; padding: 8px;">Womens</li>
-<li style="display: inline; padding: 8px;">Kids</li>
-<li style="display: inline; padding: 8px;">Sale</li>
-</div></ul>
-<div style="background-color: royalblue; height: 800px;">Landing Image</div>
-
+    
+    <div style="background-color: rgb(213, 216, 69); height: 25px;">Navbar</div>
+<div style="background-color: rgb(213, 242, 252); height: 25px;"> 
+    <li style="display: inline; padding: 10px;">Mens</li>
+    <li style="display: inline; padding: 10px;">Womens</li>
+    <li style="display: inline; padding: 10px;">Kids</li>
+    <li style="display: inline; padding: 10px;">Sale</li>
+  </ul>
+</div> 
+<div style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSLUtyTFcyyHV2F3BtDx_3VzlR-JS4LZGH5NA&s); 
+   height: 1000px;">
+       Landing Image
+   </div>
 </body>
+
 </html>
