William Scott- Fixed style attribute and div error on the 3rd and 4th code line.

--- a/unit 2/cssintroduction.html
+++ b/unit 2/cssintroduction.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html> 
     <style>
-    <div>
+      div
        {background-color: gold; 
         height: 100px; 
         width: 300px; 
