William Scott- coded Restaurant website with a Navbar, Landing Image, and Menu with prices.

--- a/unit 2/asyncActivity_sept27.html
+++ b/unit 2/asyncActivity_sept27.html
@@ -10,7 +10,7 @@
 
     body {
         background-color: blanchedalmond;
-        color: crimson
+        color: crimson; font-size: 20px;
     }
 </style>
 
@@ -28,11 +28,11 @@
     </div>
     <div><img src="https://t4.ftcdn.net/jpg/00/63/02/49/360_F_63024957_xIBYYc8pXa2wVBqXu72eBCOJxzr7l3CZ.jpg";
             height="500px"; width="1500px">
-            <Div>
-                <li style="display: inline; padding: 10px;">General Tso's Chicken w/ Fried Rice</li>
-
-
-            </Div>
+            <div style="background-color: blanchedalmond; font-size: 30px; color: black;">Scott's Chinese Restaurant Menu---</div>
+            <Div style="background-color: goldenrod; font-size: 20px;">General tso's Chicken: $7.50</Div>
+            <div style="background-color: goldenrod; font-size: 20px;">Beef Lomein: $8.00</div>
+            <div style="background-color: goldenrod; font-size: 20px;">Eggrolls: $1.50 each</div>
+              
     </body>
 
-</html>
+    </html>
