--- a/unit 3_Javascript/functionPractice/home.html
+++ b/unit 3_Javascript/functionPractice/home.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="functions.js"></script>
 <title>Practice</title>
 </head>
 <body>
-<h2>JS practice</h2>
-<button onclick="exampleFunction()">click me</button>
+   <h2>JavaScript practice</h2>
+   <button onclick="exampleFunction()">click me</button>
+   <button>check account balance</button>
+   <button onclick="depositMoney(30)">deposit money</button>
+   <button>withdraw money</button>
+
+<script src="functions.js"></script>
 </body>
 </html>
