--- a/unit 4/feDev/index.html
+++ b/unit 4/feDev/index.html
@@ -3,8 +3,15 @@
 <head>
 <title>FE Development</title>
 </head>
-<body>
+<body>    
+    
+<p id="demo">This data below is coming from my JS file:</p>
+
 <h1>Welcome to Front End Development</h1>
 
+<script src="logic.js"></script>
+
+<h2 type="button" onclick="logicDevelopment()"></h2>
 </body>
 </html>
+
